#1 Added items and the FAB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Bottom Navigation</string>
+    <string name="chat">Chat</string>
+    <string name="contacts">Contacts</string>
+    <string name="call">Call</string>
+    <string name="profile">Profile</string>
 </resources>
